# minesweeper-3ds

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
