[package]
name = "minesweeper-3ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
citro3d = { git = "https://github.com/thecatcore/citro3d-rs", branch = "citro2d-requirements" }
citro2d = { git = "https://github.com/thecatcore/citro2d-rs" }
citro2d-sys = { git = "https://github.com/thecatcore/citro2d-rs" }
picorand = "0.1.2"

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
